--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,4 +26,9 @@ layoutCountryEngland=England
 
 # Data Binding Content
 productListTitle = Products
+formatterMailDelivery=deliver via mail
+formatterParcelDelivery=deliver via parcel
+formatterCarrierDelivery=deliver via carrier
+
+
 
